--- a/mono/foodie-api/src/main/resources/application.yml
+++ b/mono/foodie-api/src/main/resources/application.yml
@@ -20,8 +20,8 @@ spring:
   datasource:                                           # 数据源的相关配置
     type: com.zaxxer.hikari.HikariDataSource          # 数据源类型：HikariCP
     driver-class-name: com.mysql.jdbc.Driver          # mysql驱动
-    url: jdbc:mysql://localhost:3306/foodie?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true
-    username: aaron
+    url: jdbc:mysql://localhost:3306/foodie?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&useSSL=false&serverTimezone=UTC
+    username: root
     password: guoxianghui
     hikari:
       connection-timeout: 30000       # 等待连接池分配连接的最大时长（毫秒），超过这个时长还没可用的连接则发生SQLException， 默认:30秒
@@ -58,7 +58,9 @@ mapper:
   mappers: com.aaronguostudio.my.mapper.MyMapper
   not-empty: false    # 在进行数据库操作的的时候，判断表达式 username != null, 是否追加 username != ''
   identity: MYSQL
+
 # 分页插件配置
 pagehelper:
   helperDialect: mysql
   supportMethodsArguments: true
+
